# LakeHouse

./: Dockerfile  README.md  compose_iceberg_trino.yaml  compose_postgres.yaml  main.py  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: etlCryptoAnalysis.py  etl_trino.py  etlpostgres.py
dags/dbtproject/cryptoAnalysis/: dbt_project.yml  init_table.sql
dags/dbtproject/cryptoAnalysis/models/: sources.yml
dags/dbtproject/cryptoAnalysis/models/gold/: ohlcv_price_change.sql
dags/dbtproject/cryptoAnalysis/models/silver/: ohlcv.sql
dags/dbtproject/ecommerce_dbt/: dbt_project.yml  profiles.yml
